@@ -698,11 +698,6 @@ make install
 					prev include/variables.h implicit
 					prev include/defs.h implicit
 					prev ${PACKAGE_ast_INCLUDE}/ls.h implicit
-					make FEATURE/cmds implicit
-						make features/cmds
-						done features/cmds
-						exec - iffe ${IFFEFLAGS} -v -c "${CC} ${mam_cc_FLAGS} ${CCFLAGS} ${LDFLAGS}" ref ${mam_cc_L+-L.} ${mam_cc_L+-L${INSTALLROOT}/lib} -I${PACKAGE_ast_INCLUDE} -I${INSTALLROOT}/include ${mam_libdll} ${mam_libcmd} ${mam_libast} ${mam_libm} ${mam_libnsl} : run features/cmds
-					done FEATURE/cmds generated
 					prev FEATURE/time implicit
 					prev include/fault.h implicit
 					prev ${PACKAGE_ast_INCLUDE}/ccode.h implicit
@@ -1073,7 +1068,6 @@ make install
 			done limits.o generated
 			make msg.o
 				make data/msg.c
-					prev FEATURE/cmds implicit
 					prev include/edit.h implicit
 					prev include/jobs.h implicit
 					prev include/builtins.h implicit
@@ -1196,7 +1190,6 @@ make install
 					prev include/history.h implicit
 					prev include/io.h implicit
 					prev include/defs.h implicit
-					prev FEATURE/cmds implicit
 					prev ${PACKAGE_ast_INCLUDE}/releaseflags.h implicit
 					prev ${PACKAGE_ast_INCLUDE}/ast.h implicit
 					prev shopt.h implicit
