@@ -89,6 +89,12 @@ NoN(vi)
 #define iswascii(c)	(!((c)&(~0177)))
 #endif
 
+#if _tput_terminfo || _tput_termcap
+#define E_MULTILINE	vp->ed->e_multiline
+#else
+#define E_MULTILINE	0
+#endif
+
 typedef struct _vi_
 {
 	int direction;
@@ -300,7 +306,7 @@ int ed_viread(void *context, int fd, char *shbuf, int nchar, int reedit)
 	i = sigsetjmp(editb.e_env,0);
 	if( i != 0 )
 	{
-		if(vp->ed->e_multiline)
+		if(E_MULTILINE)
 		{
 			cur_virt = last_virt;
 			sync_cursor(vp);
@@ -331,7 +337,7 @@ int ed_viread(void *context, int fd, char *shbuf, int nchar, int reedit)
 		refresh(vp,INPUT);
 	}
 	getline(vp,APPEND);
-	if(vp->ed->e_multiline)
+	if(E_MULTILINE)
 		cursor(vp, last_phys);
 	/*** add a new line if user typed unescaped \n ***/
 	/* to cause the shell to process the line */
@@ -1934,7 +1940,7 @@ static void refresh(Vi_t* vp, int mode)
 		vp->long_line = vp->long_char;
 	}
 
-	if(vp->ed->e_multiline && vp->ofirst_wind==INVALID)
+	if(E_MULTILINE && vp->ofirst_wind==INVALID)
 		ed_setcursor(vp->ed, physical, last_phys+1, last_phys+1, -1);
 	vp->ocur_phys = ncur_phys;
 	vp->ocur_virt = cur_virt;
